--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ## Final projects for NRES 470
 
-Students will work in groups of ~3-4 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.
+Students will work in groups of ~3-4 people (maximum of 5) to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.
 
 ## Overview
 
@@ -29,7 +29,7 @@ Students will work in groups of ~3-4 people to perform a population viability an
 ## Timeline
 
 - **PROPOSAL:** Due Fri March 4!
-- **INITIAL PVA** Due Fri April 1: description of how your PVA model works and where the parameter estimates come from -- and a link to a working PVA model
+- **INITIAL PVA** Due Fri April 1: description of how your PVA model works and where the parameter estimates come from -- and a link to a working PVA model!     
 - **SEND DRAFT FOR PEER REVIEW** Due April 11 by 5pm (for peer reviews on April 15)
 - **DRAFT FINAL PAPER:** Due Wed April 22 by 5pm
 - **FINAL FINAL PAPER:** Due Wed May 11
@@ -41,13 +41,24 @@ Remember that the semester will get crazy at the end (including for your instruc
 
 Your project proposal (approx 1 pg) will consist of:  
 
-1. **Title**: should indicate what species you are modeling, and at least hint at what question will be addressed   
+1. **Title**: should indicate what species you are modeling, and hint at what question(s) will be addressed   
 2. **Project participants**: provide names of all participants (3-5).   
 3. **Research question(s)**: Provide one or more testable and management-relevant questions that you plan to address using your population model. 
-4. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructors that your project is **interesting**!    
-5. **Data sources**: Describe one or more data/information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is **possible**!)  
+4. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructor/TA that your project is **interesting**!    
+5. **Data sources**: Describe one or more information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is **possible**!)  
 
-**NOTE about data sources:** The most important parameters you need for a PVA model are *survival rates* (usually age-structured), *fecundity rates* (often age-structured as well), *stochasticity* (amount of random variability in those vital rates), *initial abundance*, *dispersal rates*, and *carrying capacity (K)*. We have gone over many of these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class). If all else fails, you can use published records for similar species (assuming that the vital rates are approximately the same)!
+The key parameters you will likely need for your PVA model (and will be searching the literature for!) are: 
+
+- *survival rates* (usually age-structured)  
+- *fecundity rates* (often age-structured as well) and *age at maturity*    
+- *stochasticity* (amount of year-to-year variability in the above vital rates)  
+- *initial abundance*   
+- *carrying capacity (K)* (potentially for multiple subpopulations in a metapopulation!)
+- *dispersal rates* (for metapopulation models)
+- *habitat quality* (for metapopulation models)
+- linkages between management activities and vital rates (to run scenario tests!)   
+
+We have gone over many of these concepts in class already- PVA is just a way of putting all the concepts from this class together in a single model! You can get the above information directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class- and which you are not expected to do!!). If all else fails, you can use published records for similar species as a proxy (assuming that the vital rates are approximately the same)!
 
 ## Second project-related assignment: the initial PVA!
 
@@ -62,11 +73,11 @@ Your initial parameterized PVA will consist of:
     
 ## Third project-related assignment: the written project (rough draft)!
 
-You will submit two rough drafts: one for our group peer review in lab, and the other so your instructor and TA can give detailed feedback. 
+You will submit two rough drafts: one for our group peer review, and the other so your instructor and TA can give detailed feedback. 
 
-Your final written paper is expected to be in the style of a **scientific manuscript**. That is, it should have an *introduction*, *methods*, *results* and *discussion* sections, and should cite relevant literature. 
+Your final written paper is expected to be in the style of a **scientific manuscript**. That is, it should have a *title*, *introduction*, *methods*, *results*, *discussion*, *acknowledgements* and *literature cited* sections. Please also include your working PVA model (e.g., InsightMaker link or R code). 
 
-**There are no formatting guidelines or page limits**. Please be as concise as possible while still covering all the key elements in the rubric. You can use any standard format for your references, all we ask is that you be consistent!
+**There are no formatting guidelines or page limits**. Please be as concise as possible while still covering all the key elements in the grading rubric. You can use any standard format for your references (e.g., APA), all we ask is that you be consistent!
 
 ### Introduction
 This is where you introduce the topic and describe why it's important. You should also include your research questions here, along with any hypotheses that you are testing. You can recycle and flesh out the material from your proposal! This should be at least a 2-3 paragraphs.
@@ -117,17 +128,17 @@ A rubric for the presentations can be found [here](presentationProject_rubric.do
 
 ## Final paper peer review/feedback session
 
-In lab on Fri Apr 23 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
+In lab on Fri Apr 15 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
 
 The way it will work is as follows:
 
-1. By the end of the day on April 21 (Wed), you will receive another group's draft manuscript via WebCampus (see list below). 
+1. By the end of the day on April 11, you will receive another group's draft manuscript via WebCampus (see list below). 
 
 2. Before lab, please thoroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
 
-3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA*
+3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA* (submit/share via WebCampus)
 
-4. After that, we will break up into new groups. One representative from each peer-review group will meet with the project group that wrote the draft manuscript, to give the feedback in person (and on paper).
+4. After that, we will break up into new groups. One representative from each peer-review group will meet with the project group that wrote the draft manuscript, to give feedback in person.
 
 5. For any remaining time in lab, you will have a chance to work on your write-ups and presentations!
 
