--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -36,19 +36,33 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming midterm exam
 
-**when and where** The first midterm exam (out of two) is coming up Monday **March 15**. You will have the whole 50 minute class period to take the exam. The exam will be online (of course) and administered on Top Hat. 
+**when and where** The first midterm exam (out of two) is coming up Wednesday **March 9**. You will have the whole 50 minute class period to take the exam. The exam will be on paper/scantron this year. 
 
 **what** The exam will cover:
 
 - All material in Chapters 1-3 of the Gotelli book *including matrix population modeling concepts*.   
-- All material covered in lectures up to and including this lecture on matrix population models.   
-- All material covered in labs 1-4.    
-- Ch. 1 of "Beyond Connecting the Dots" (basic systems thinking and stock-flow modeling, concepts of feedbacks and equilibria)
-- Basic programming concepts (IF-THEN-ELSE and iteration loops)
+- All material covered in lectures, including the following web pages and corresponding lectures and top hat pages:    
+    * [Systems thinking and modeling](LECTURE1.html)
+    * [Exponential growth](LECTURE2.html)
+    * [Malthus and limits to growth](LECTURE3.html)
+    * [Logistic population growth](LECTURE4.html)
+    * [Allee effect](LECTURE5.html)
+    * [Age-structured populations](LECTURE6.html)
+    * [Matrix population models](LECTURE7.html)
+    * NOTE: all lectures have been recorded and are available via the "Zoom" link on WebCampus in case you missed any or in case you'd like to use these recordings as review/study materials   
+- All material covered in labs 1-4, including:
+    * [Lab 1: exponential growth](LAB1.html)
+    * [Lab 2: logistic growth](LAB2.html)
+    * [Lab 3: age-structured populations](LAB3.html)
+    * [Lab 4: matrix population models](LAB4.html)
+- Basic programming concepts:
+    * Conditional logic (IF-THEN-ELSE): see examples in Malthus and Allee effect lectures
+    * Iteration ('FOR loops'): see examples in Lab 1 and Lab 4. 
+    * NOTE: you will NOT be tested on how to run population models in R (or how to do anything else in R).
 
-*The exam will consist of a mixture of multiple-choice and short-answer questions.*      
+*The exam will consist of a mixture of multiple-choice and short-answer questions*      
 
-*Please bring a calculator- a regular scientific calculator is fine (not absolutely necessary, but it could be helpful for at least one question on the exam!)*
+*Please bring a calculator- a regular scientific calculator is fine*
 
 
 ![](uncertainty2.jpg)
@@ -90,7 +104,7 @@ To incorporate uncertainty and randomness into our models, we often include *sto
 
 Every random-number generator has a **distribution**. This is a way of defining what exactly is in the box.This can be visualized as a boxplot or histogram, with the unique possible values represented on the X axis and the probabilities associated with each unique value represented on the Y axis. 
 
-If you want to follow along with this lecture in R, you can find the R script [here](LECTURE8.R). I recommend right-clicking on the link, saving the script to a designated folder, and loading up the script in RStudio.
+If you want to follow along with this lecture in R, you can find the R script [here](LECTURE8.R). I recommend right-clicking on the link, saving the script to a designated folder (ideally, your project directory), and loading up the script in RStudio.
 
 For example, the box might have 10 "ones", 5 "twos", and 2 "threes". In this case the distribution looks like this (*probability* of each *possibility*):
 
