--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -483,7 +483,7 @@ For more on matrix population models, the bible of this subject is [this book by
 
 And finally, check this out- this is a database of thousands of stage matrices for plants and animals around the world:
 
-[COMADRE and COMPADRE databases](https://compadredb.wordpress.com/2015/10/05/introducing-the-comadre-animal-matrix-database/)
+[COMADRE and COMPADRE databases](https://compadre-db.org/Data)
 
 
 [--go to next lecture--](LECTURE8.html)
