--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -64,6 +64,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 *Please bring a calculator- a regular scientific calculator is fine*
 
+We will have a review session during our regular class meeting on the Monday prior to the exam (March 7). Please make note of any questions that come up as you study- we can talk these over during the review session!
 
 ![](uncertainty2.jpg)
 
